@@ -6,6 +6,9 @@ synaptic (0.75.1) UNRELEASED; urgency=low
     - fix repository editor (closes: #613436)
   * gtk/gtkbuilder/window_main.ui:
     - fixup glade->gtkbuild menu messup
+  * gtk/rgmainwindow.cc:
+    - hide "quick filter" if no apt-xapian-index is installed
+      (closes: #613434)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Feb 2011 10:28:27 +0100
 
